# tomlcv

./: .gitignore  cv-schema.json  cv.schema.yml  cv.toml  gilad.kutiel.toml  gilad.kutiel.yaml  package-lock.json  package.json  pyproject.toml
docs/: CNAME  index.html
src/: index.css  main.tsx  schema.ts
tomlcv/: __init__.py  cv.j2  resume.j2
