[tool.poetry]
name = "tomlcv"
version = "0.0.5"
description = ""
authors = ["Gilad Kutiel <gilad.kutiel@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pygments = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
toml = "^0.10.2"
jinja2 = "^3.1.4"
typer = "^0.15.1"
cattrs = "^24.1.2"
pyyaml = "^6.0.2"
weasyprint = "^65.1"


[tool.poetry.scripts]
yamlcv = "tomlcv:main"

